# zip_verifyer

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
app/: check_hash.py  config.py  main.py
app/api/: routers.py  schemas.py
app/db/: session.py
app/models/: task_result.py
app/services/: celery.py  minio_client.py
external_api/: coverage.py  smells.py  vulnerabilities.py
migrations/: env.py
migrations/versions/: 7ff1cf44d6a3_first.py
tests/api/: test_upload.py
tests/unit/: test_hash.py
