[project]
name = "zip-verifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark",email = "mark.tumanyan@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi-keycloak (>=1.0.11,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

